[GS-1] update readme

--- a/bin/README
+++ b/bin/README
@@ -1,7 +1,7 @@
 Time: Oct 23, 2014
 Author: Mingxi Wu
 
-
-The comprehensive doc is at https://graphsql.atlassian.net/wiki/display/GS/GraphSQL+Shell+Guide
+Quick start: check example/ directory for shell script examples. 
+For detailed user guide, check the comprehensive doc at https://graphsql.atlassian.net/wiki/display/GS/GraphSQL+Shell+Guide
 
 
