--- a/src/customer/core_impl/gsql_impl/README
+++ b/src/customer/core_impl/gsql_impl/README
@@ -2,4 +2,4 @@ This directory stores
 
 - ddl/  /* ddl shell script source code for a POC case */
 - TokenBank  /* the token and condition UDFs for a POC case */
-
+- graph_config.yaml /* ddl generate this when you do export schema graphname */
