--- a/gtest/README
+++ b/gtest/README
@@ -1,24 +1,24 @@
 HOW TO GUIDE
 
-In below struct, users will only work under drivers/ and test_case/ directory.
-1) In drivers/, put your test program driver 
-2) In test_case/, put your test cases here, follows the structures
-3) Run the test framework
+In below struct, users will only work under drivers/ resources/ and test_case/ directory.
+1) In drivers/, put your test program driver.
+2) In resources/, put your dependent resources libraries or configs here.
+3) In test_case/, put your test cases here, follows the structures.
+4) Run the test framework
      ./gtest program_driver 1 2 ...
- 
+
      program_driver is your test program driver file name, found in drivers folder.
-     The numbers represent the regress number: 1 means test_case/PROGRAM/regress1
+     The numbers represent the regress number: 1 means test_case/program_driver/regress1
      You can use '\*' to represent multiple directories:
-         ./gr.sh PROGRAM \*
+         ./gr.sh program_driver \*
      To run 1* and 2*, you can do
-         ./gr.sh PROGRAM 1\* 2\*
+         ./gr.sh program_driver 1\* 2\*
 
 ==================================================================================
 
 gtest/
 ├── base_line -> ../src/olgp/regress/base_line        /* The baseline of your program output, will be compare with the output */
 ├── config                                            /* The configurations file */
-├── data_set -> ../src/olgp/regress/data_set          /* You can put your test input data here */
 ├── diff                                              /* The difference of output and base_line will be put in this folder (subfolders based on driver name and regression) */
 │   ├── gsql                                          /* The diff for driver named 'gsql' (same name with the correspond driver without extension) will be put inside here */
 │   │   ├── regress1                                  /* The diff for first regress test cases */
@@ -30,8 +30,7 @@ gtest/
 │       └── regress1
 ├── drivers -> ../src/olgp/regress/drivers            /* Your testing program's driver should be here */
 ├── gtest -> ../src/utility/tools/gtest/gtest.sh      /* Script to run this framework */
-├── lib
-│   └── .gtest.jar -> ../src/utility/tools/gtest/gtest.jar      /*The binary */  
+├── lib -> ../src/olgp/regress/lib                    /* The binaries can be put here */
 ├── output                                            /* The output of your programs, same structure as diff/ */
 │   ├── gsql
 │   │   ├── regress1
@@ -44,5 +43,7 @@ gtest/
 │   └── loader
 │       └── regress1
 │           └── test1.log
+├── README
+├── resources -> ../src/olgp/regress/resources       /* You can put your test program config, input data, or other resources here */
 └── test_case -> ../src/olgp/regress/test_case       /* The test cases for all your programs should be here */
 
