--- a/src/customer/core_impl/gsql_impl/mainpage.dox
+++ b/src/customer/core_impl/gsql_impl/mainpage.dox
@@ -2,7 +2,7 @@
  * @mainpage GSQL Loader Libraries
  * @copyright Copyright(c) 2015, GraphSQL Inc.
  *
- * @brief GSQL Shell built-in Loader libraries that can be used in load statements.
+ * @brief GSQL Shell built-in Loader libraries that can be used in loading statements.
  *
  *
  * @date Mar 16, 2015
